<resources>
    <string name="app_name">Messenger</string>
    <string name="messenger">Messenger</string>
    <string name="your_email_address">Your email address</string>
    <string name="welcome_to_messenger">Welcome to Messenger!</string>
    <string name="your_password">Your password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="age">Age</string>
    <string name="sigh_up">Sigh up</string>
    <string name="forgot_password_title">Forgot password?</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_link_sent">The reset link has been sent to your email</string>
    <string name="email_is_empty">Email is empty</string>
    <string name="type_your_message">Type your message</string>
    <string name="send_message">Send message</string>
</resources>